# YOLO-LLM-E-Waste

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/yolo_llm/: config.py  detector.py  gemini.py  main.py  metrics.py  utils.py
summary/: results_20250607_184253.csv
